[package]
name = "cs262"
version = "0.1.0"
edition = "2021"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
colored = "2.0.0"
fastrand = "1.9.0"
flume = "0.10.14"
parking_lot = "0.12.1"
rusqlite = "0.29.0"
socket2 = { version = "0.5.1", features = ["all"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wildmatch = "2.1.1"
